--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+numpy = "*"
+scipy = "*"
+opencv-python = "*"
+scikit-learn = "*"
+easydict = "*"
 
 [requires]
 python_version = "3.6"
